--- a/thankyou.html
+++ b/thankyou.html
@@ -9,10 +9,10 @@
   <body>
     <div id="thankyou"><b>Normal levs</b></div>
 
-    <img id="rizz" src="/djchickendance.gif" alt="rizzler god" class="responsive" />
+    <img id="rizz" src="djchickendance.gif" alt="rizzler god" class="responsive" />
     <br />
     <audio controls autoplay loop>
-      <source src="/Snapchat-1741025751.mp3" type="audio/mpeg" />
+      <source src="Snapchat-1741025751.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
     <h1>Don't go yet!</h1>
