--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </button>
     <button class="answerButton" id="noButton">No keh? shey ogun fe pa e sha</button>
     <br />
-    <img src="/dj-chicken-begging.gif" alt="cat asking question" class="responsive" />
+    <img src="dj-chicken-begging.gif" alt="cat asking question" class="responsive" />
 
     <script>
       document
