--- a/food.html
+++ b/food.html
@@ -52,7 +52,7 @@
         <label><input type="checkbox" name="food" value="steak" /> steak</label>
       </div>
       <div class="food-item">
-        <img src="/food/jollofrice.jpeg" alt="sushi" />
+        <img src="food/jollofrice.jpeg" alt="sushi" />
         <label><input type="checkbox" name="food" value="sushi" /> jollofrice</label>
       </div>
     </div>
