--- a/dessert.html
+++ b/dessert.html
@@ -17,23 +17,23 @@
         >
       </div>
       <div class="dessert-item">
-        <img src="/food/icecream.jpeg" alt="churro" />
+        <img src="food/icecream.jpeg" alt="churro" />
         <label
           ><input type="checkbox" name="dessert" value="churro" /> icecream</label
         >
       </div>
       <div class="dessert-item">
-        <img src="/food/puffpuff.jpeg" alt="che" />
+        <img src="food/puffpuff.jpeg" alt="che" />
         <label><input type="checkbox" name="dessert" value="che" /> puffpuff</label>
       </div>
       <div class="dessert-item">
-        <img src="/food/meatpie.jpeg" alt="mochi" />
+        <img src="food/meatpie.jpeg" alt="mochi" />
         <label
           ><input type="checkbox" name="dessert" value="mochi" /> meatpie</label
         >
       </div>
       <div class="dessert-item">
-        <img src="/food/suya.jpeg" alt="randombun" />
+        <img src="food/suya.jpeg" alt="randombun" />
         <label
           ><input type="checkbox" name="dessert" value="randombun" /> Suya</label
         >
