--- a/activities.html
+++ b/activities.html
@@ -10,7 +10,7 @@
     <div id="activityquestion"><b>What are we doing after?</b></div>
     <div class="activities-selection">
       <div class="activity-item">
-        <img src="/eatingass.jpg" alt="aquarium" />
+        <img src="eatingass.jpg" alt="aquarium" />
         <label
           ><input
             type="checkbox"
@@ -40,7 +40,7 @@
         >
       </div>
       <div class="activity-item">
-        <img src="/sipandpaint.jpeg" alt="ceramics" />
+        <img src="sipandpaint.jpeg" alt="ceramics" />
         <label
           ><input
             type="checkbox"
